# Gstreamer

./: 00_web_video_playing.cpp  01_concepts.cpp  03_dynamic_pipline.cpp  04_pad_capabilities.c  05_multi_thread.c  06_pipeline_buffer.c  07_deepstream-test1.c  09_deepstream_test3.c  CMakeLists.txt  README.md
